--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Web API using **Node.js** and **Express** that uses **Express Middleware**.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
